--- a/src/pages/login-register.css
+++ b/src/pages/login-register.css
@@ -1,93 +1,71 @@
 body{
-  font-family: sans-serif;
-
+  margin: 0px;
+  padding: 0px;
 }
-.register-container {
-  background:rgb(100, 184, 177, 0.3);
-    min-width: 280px;
-    
-  }
 
-.register-login-container {
- 
-  /* width: 100vw; */
-  height: 100vh;
-}
+
+
 .main{
   /* background-image: url(../image/login-register3.jpg); */
   background-size: cover;
   background-position:  left bottom;
 }
 .login{
-  background-color: rgb(255, 255, 255);
-  height: 97vh;
+ 
   align-items: center;
 
-}
-  
-.logo{
-  height: 100%;
-  width: 100%;
-  color: black;
-}
-.register-login-banner {
-
-  width: 100%;
-  min-width: 280px;
-  height: 100vh;
-  margin: 0px;
-  padding:0px;
 }
 
 
 .register{
-  width:60%;
-  max-width: 450px;
+  width:50%;
+  /* max-width: 450px; */
   min-width: 280px;
 }
 
-body {
-  margin: 0px;
-  padding: 0px;
-}
+
 .login-container{
   margin-left: 10px;
-  max-width: 450px;
   padding: 5%;
-  width: 60%;
-  border: .5px solid rgba(114, 190, 241, 0.318);
-  /* background-color: rgb(252, 252, 252); */
+  width: 80%;
+  border: 1px solid rgb(250, 250, 250,.3);
+  background: rgb(100, 184, 177, 0.3);
+
 }
 
-/* .form-text{
-  font-size: 1.2rem;
-} */
+.register-container{
+  
+    margin-left: 10px;
+    min-width: 280px;
+    padding: 5%;
+    width: 50%;
+    border: 1px solid rgb(250, 250, 250,.3);
+    background: rgb(100, 184, 177, 0.3);
+}
+
+.form-text{
+  color: white;
+  font-size: 1.1rem;
+
+}
+
+.radio-text{
+  color: white;
+}
 
 .link{
   text-decoration: none;
   font-size: 1.3rem;
   text-align: center;
-  color: #1976D2;
+  color: white;
 }
 
 .link:hover{
   font-weight: 600;
-  text-shadow: 1px 1px 2px #81b3ca;
+  /* text-shadow: 1px 1px 2px #000000; */
 }
 
 .login-registration-text{
   font-weight: bold;
-  text-shadow: 1px 1px 1px rgb(25, 118, 210);
-}
-@media only screen and (max-width: 600px) {
-  .register-login-banner{
-    height: 10vh;
-  }
-  .login{
-    background-color: rgb(255, 255, 255);
-    height: 90vh;
-  }
-  .login-container{
-    width: 80%;
-  }
+  color: white;
 }
