--- a/src/pages/login-register.css
+++ b/src/pages/login-register.css
@@ -37,7 +37,7 @@ body{
   
     margin-left: 10px;
     min-width: 280px;
-    padding: 5%;
+    padding:2% 5%;
     width: 50%;
     border: 1px solid rgb(250, 250, 250,.3);
     background: rgb(100, 184, 177, 0.3);
