--- a/src/components/MainComponent/AboutUsPage/About.css
+++ b/src/components/MainComponent/AboutUsPage/About.css
@@ -1,7 +1,7 @@
 
 #about-container {
 
-    background-image: url('./images/image2.png');
+    background-image: url('./images/about2.jpg');
     background-repeat: no-repeat;
     background-size: 65%;
     background-position: center;
