--- a/src/components/MainComponent/ResortList/style.css
+++ b/src/components/MainComponent/ResortList/style.css
@@ -13,6 +13,6 @@
     src: url("../../../Resort\ Fonts/Fontspring-DEMO-resort-sansbold.otf");
 }
 
-* {
+/* * {
     font-family: sansblack;
-}
+} */
