Fixed homepage footer

--- a/src/components/MainComponent/LandingPage/FooterLandingPage/FooterLandingPage.css
+++ b/src/components/MainComponent/LandingPage/FooterLandingPage/FooterLandingPage.css
@@ -1,7 +1,3 @@
-.footer-landing-page {
-    background-color: black;
-}
-
 .copyright{
-    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
