Added the Team Member Cards in AboutUsPage

--- a/src/components/MainComponent/AboutUsPage/About.css
+++ b/src/components/MainComponent/AboutUsPage/About.css
@@ -1,3 +1,5 @@
-.carousel-sizing{
-    width: 100%;
+.aboutuscard{
+    width: 18rem;
+    height: 25rem;
+    background-color: rgb(255, 255, 255, 0.65);
 }
